--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,14 @@ __pycache__/
 # Model weights
 *.h5
 *.pb
+**/experiments
+
 
 # Dasets inside dataset folder
 **/dataset/
 **/dataset/train
 **/dataset/validation
+
 
 # C extensions
 *.so
