--- a/config/darknet_19_224_imagenet.yml
+++ b/config/darknet_19_224_imagenet.yml
@@ -8,7 +8,7 @@ TRAIN:
   MAX_EPOCHS: 200
   BATCH_SIZE: 32
   OPTIMIZER:
-    OPTIMIZER: 'SGD'
+    OPTIMIZER: 'ADAM'
     LEARNING_RATE: 0.001
     MOMENTUM: 0.9
     WEIGHT_DECAY: 0.0001
